export type HexAssignment = {
  q: number;
  r: number;
  s: number;
  questId: string;
};
